--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <video id="video-background" autoplay loop muted>
-        <source src="C:\Users\hp\Downloads\harry-potter-hogwarts-wizardry-casle-free-wallpaper.mp4" type="video/mp4">
+        <source src="harry-potter-hogwarts-wizardry-casle-free-wallpaper.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <div class="controls">
